--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,13 @@
 ---
 particlefilter:
-  train_script: './train_particlefilter.py'
+  train_script: './train.py'
   train_args:
     data_args:
       region_name: 'particlefilter'
       train_test_dataset: '/scratch/mzu/zanef2/particlefilter_128x128_6500.h5'
+    early_stop_args:
+      patience: 5
+      min_delta_percent: 1
   bayesian_opt_driver_args:
     architecture_config:
       trials: 100
@@ -12,7 +15,7 @@ particlefilter:
       - "maxpool_kernel_size <= conv_kernel_size"
       - "conv_stride <= conv_kernel_size"
       objectives:
-      - name: total_mse
+      - name: average_mse
         type: minimize
       - name: inference_time
         type: minimize
@@ -33,7 +36,7 @@ particlefilter:
         - 1
         - 10
       tracking_metrics:
-      - total_mse
+      - average_mse
       - inference_time
   
     hyperparameter_config:
@@ -63,7 +66,76 @@ particlefilter:
         - 0.1
         log_scale: true
       objectives:
-      - name: total_mse
+      - name: average_mse
         type: minimize
       tracking_metrics:
-      - total_mse
+      - average_mse
+miniweather:
+  train_script: './train.py'
+  train_args:
+    data_args:
+      region_name: 'MiniWeatherTimestep'
+      train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/miniweather_768_384.h5'
+      train_end_index: 1000
+    early_stop_args:
+      patience: 5
+      min_delta_percent: 1
+  bayesian_opt_driver_args:
+    architecture_config:
+      trials: 100
+      objectives:
+      - name: average_mse
+        type: minimize
+      - name: inference_time
+        type: minimize
+      parameter_space:
+      - name: conv1_stride
+        type: fixed
+        value: 1
+      - name: conv1_kernel_size
+        type: choice
+        values:
+        - 3
+        - 5
+        - 7
+        - 9
+        - 11
+      - name: activation_function
+        type: choice
+        values:
+          - leaky_relu
+          - tanh
+      tracking_metrics:
+      - average_mse
+      - inference_time
+    hyperparameter_config:
+      trials: 15
+      parameter_constraints:
+        - "inference_time <= 1"
+      parameter_space:
+      - name: learning_rate
+        type: range
+        bounds:
+        - 0.0001
+        -  0.01
+        log_scale: true
+      - name: epochs
+        type: fixed
+        value: 20
+      - name: batch_size
+        type: fixed
+        value: 32
+      - name: dropout
+        type: fixed
+        value: 0
+      - name: weight_decay
+        type: range
+        bounds:
+        - 0.0001
+        - 0.1
+        log_scale: true
+      objectives:
+      - name: average_mse
+        type: minimize
+      tracking_metrics:
+      - average_mse
