--- a/config.yaml
+++ b/config.yaml
@@ -89,8 +89,8 @@ miniweather:
       train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/miniweather_768_384.h5'
       train_end_index: 1000
     early_stop_args:
-      patience: 5
-      min_delta_percent: 1
+      patience: 3
+      min_delta_percent: 10
   bayesian_opt_driver_args:
     architecture_config:
       trials: 100
@@ -111,18 +111,30 @@ miniweather:
         - 7
         - 9
         - 11
-      - name: activation_function
+      - name: conv1_out_channels
         type: choice
         values:
-          - leaky_relu
-          - tanh
+        - 4
+        - 8
+        - 16
+      - name: conv2_kernel_size
+        type: choice
+        values:
+        - 0
+        - 3
+        - 5
+        - 7
+        - 9
+      - name: activation_function
+        type: fixed
+        value: leaky_relu
       tracking_metrics:
       - average_mse
       - inference_time
     hyperparameter_config:
       trials: 15
       parameter_constraints:
-        - "inference_time <= 1"
+        - "inference_time <= 6"
       parameter_space:
       - name: learning_rate
         type: range
@@ -130,15 +142,17 @@ miniweather:
         - 0.0001
         -  0.01
         log_scale: true
+      - name: dropout
+        type: range
+        bounds:
+        - 0.0
+        - 0.5
       - name: epochs
         type: fixed
         value: 15
       - name: batch_size
         type: fixed
         value: 32
-      - name: dropout
-        type: fixed
-        value: 0
       - name: weight_decay
         type: range
         bounds:
