--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,8 @@ particlefilter:
   train_args:
     data_args:
       region_name: 'particlefilter'
-      train_test_dataset: '/scratch/mzu/zanef2/particlefilter_128x128_6500.h5'
+      train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/particlefilter_128x128_6500.h5'
+      load_entire: false
     early_stop_args:
       patience: 10
       min_delta_percent: 1
@@ -40,7 +41,7 @@ particlefilter:
       - inference_time
   
     hyperparameter_config:
-      trials: 30
+      trials: 1
       parameter_constraints:
         - "inference_time <= 3.0"
       parameter_space:
@@ -76,6 +77,7 @@ miniweather:
     data_args:
       region_name: 'MiniWeatherTimestep'
       train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/miniweather_768_384.h5'
+      load_entire: false
       train_end_index: 1000
     early_stop_args:
       patience: 5
@@ -110,6 +112,66 @@ miniweather:
       - inference_time
     hyperparameter_config:
       trials: 15
+      parameter_constraints:
+        - "inference_time <= 1"
+      parameter_space:
+      - name: learning_rate
+        type: range
+        bounds:
+        - 0.0001
+        -  0.01
+        log_scale: true
+      - name: epochs
+        type: fixed
+        value: 15
+      - name: batch_size
+        type: fixed
+        value: 32
+      - name: dropout
+        type: fixed
+        value: 0
+      - name: weight_decay
+        type: range
+        bounds:
+        - 0.0001
+        - 0.1
+        log_scale: true
+      objectives:
+      - name: average_mse
+        type: minimize
+      tracking_metrics:
+      - average_mse
+binomial_options:
+  train_script: './train.py'
+  train_args:
+    data_args:
+      region_name: 'BinomialOptionsKernel'
+      train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/binomial_options_16777216.h5'
+      load_entire: true
+      train_end_index: 131072
+    early_stop_args:
+      patience: 5
+      min_delta_percent: 10
+  bayesian_opt_driver_args:
+    architecture_config:
+      trials: 100
+      objectives:
+      - name: average_mse
+        type: minimize
+      - name: inference_time
+        type: minimize
+      parameter_space:
+      - name: multiplier
+        type: fixed
+        value: 8
+      - name: hidden_features
+        type: fixed
+        value: 5
+      tracking_metrics:
+      - average_mse
+      - inference_time
+    hyperparameter_config:
+      trials: 30
       parameter_constraints:
         - "inference_time <= 1"
       parameter_space:
