--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ particlefilter:
     data_args:
       region_name: 'particlefilter'
       load_entire: false
-      train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/particlefilter_13000.h5'
+      train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/particlefilter_128x128_13000.h5'
     early_stop_args:
       patience: 10
       min_delta_percent: 3
@@ -37,22 +37,16 @@ particlefilter:
         - 1
         - 10
       - name: fc2_size
-        type: choice
-        values:
-        - 0
-        - 2
-        - 4
-        - 8
-        - 16
-        - 32
-        - 64
+        type: range
+        bounds:
+        - 0 
         - 128
       tracking_metrics:
       - average_mse
       - inference_time
   
     hyperparameter_config:
-      trials: 1
+      trials: 30
       parameter_constraints:
         - "inference_time <= 3.0"
       parameter_space:
@@ -88,7 +82,7 @@ miniweather:
     data_args:
       region_name: 'MiniWeatherTimestep'
       train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/miniweather_768_384.h5'
-      load_entire: false
+      load_entire: true
       train_end_index: 1000
     early_stop_args:
       patience: 3
@@ -106,27 +100,20 @@ miniweather:
         type: fixed
         value: 1
       - name: conv1_kernel_size
-        type: choice
-        values:
+        type: range
+        bounds:
         - 3
-        - 5
-        - 7
-        - 9
-        - 11
+        - 15 
       - name: conv1_out_channels
-        type: choice
-        values:
+        type: range
+        bounds:
         - 4
-        - 8
-        - 16
+        - 48
       - name: conv2_kernel_size
-        type: choice
-        values:
+        type: range
+        bounds:
         - 0
-        - 3
-        - 5
-        - 7
-        - 9
+        - 16
       - name: activation_function
         type: fixed
         value: leaky_relu
@@ -136,7 +123,7 @@ miniweather:
     hyperparameter_config:
       trials: 15
       parameter_constraints:
-        - "inference_time <= 6"
+        - "inference_time <= 2000"
       parameter_space:
       - name: learning_rate
         type: range
@@ -151,7 +138,7 @@ miniweather:
         - 0.5
       - name: epochs
         type: fixed
-        value: 15
+        value: 10
       - name: batch_size
         type: fixed
         value: 32
@@ -177,13 +164,15 @@ binomial_options:
       # We have so much data for this one,
       # performance is affected a lot by 
       # the amount of test data
-      test_split: 0.9
+      test_split: 0.97
     early_stop_args:
       patience: 5
       min_delta_percent: 10
   bayesian_opt_driver_args:
     architecture_config:
       trials: 100
+      parameter_constraints:
+      - "hidden2_features <= hidden1_features"
       objectives:
       - name: average_mse
         type: minimize
@@ -191,18 +180,27 @@ binomial_options:
         type: minimize
       parameter_space:
       - name: multiplier
-        type: fixed
-        value: 8
-      - name: hidden_features
-        type: fixed
-        value: 5
+        type: range
+        bounds: 
+        - 1
+        - 32
+      - name: hidden1_features
+        type: range
+        bounds:
+        - 5
+        - 32
+      - name: hidden2_features
+        type: range
+        bounds:
+        - 0
+        - 32
       tracking_metrics:
       - average_mse
       - inference_time
     hyperparameter_config:
-      trials: 30
+      trials: 15
       parameter_constraints:
-        - "inference_time <= 1"
+        - "inference_time <= 4"
       parameter_space:
       - name: learning_rate
         type: range
@@ -212,13 +210,15 @@ binomial_options:
         log_scale: true
       - name: epochs
         type: fixed
-        value: 10
+        value: 15
       - name: batch_size
         type: fixed
         value: 32
       - name: dropout
-        type: fixed
-        value: 0
+        type: range
+        bounds:
+        - 0.0
+        - 0.1
       - name: weight_decay
         type: range
         bounds:
