--- a/config.yaml
+++ b/config.yaml
@@ -165,6 +165,7 @@ binomial_options:
       # performance is affected a lot by 
       # the amount of test data
       test_split: 0.97
+      max_test_batches: 8000
     early_stop_args:
       patience: 5
       min_delta_percent: 10
@@ -198,7 +199,7 @@ binomial_options:
       - average_mse
       - inference_time
     hyperparameter_config:
-      trials: 15
+      trials: 30
       parameter_constraints:
         - "inference_time <= 4"
       parameter_space:
@@ -210,7 +211,90 @@ binomial_options:
         log_scale: true
       - name: epochs
         type: fixed
-        value: 15
+        value: 50
+      - name: batch_size
+        type: fixed
+        value: 32
+      - name: dropout
+        type: range
+        bounds:
+        - 0.0
+        - 0.1
+      - name: weight_decay
+        type: range
+        bounds:
+        - 0.0001
+        - 0.1
+        log_scale: true
+      objectives:
+      - name: average_mse
+        type: minimize
+      tracking_metrics:
+      - average_mse
+bonds:
+  train_script: './train.py'
+  train_args:
+    data_args:
+      region_name: 'BondsKernel'
+      train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/bonds_16777216.h5'
+      load_entire: true
+      train_end_index: 6194304 
+      # We have so much data for this one,
+      # performance is affected a lot by 
+      # the amount of test data
+      test_split: 0.95
+      # Admittedly, this is awkward.
+      # We don't want to use our entire 'test set'
+      # (non training set) for validation, but we
+      # do want to use the entire thing for measuring
+      # inference tim
+      max_test_batches: 8000
+    early_stop_args:
+      patience: 5
+      min_delta_percent: 10
+  bayesian_opt_driver_args:
+    architecture_config:
+      trials: 100
+      parameter_constraints:
+      - "hidden2_features <= hidden1_features"
+      objectives:
+      - name: average_mse
+        type: minimize
+      - name: inference_time
+        type: minimize
+      parameter_space:
+      - name: multiplier
+        type: range
+        bounds: 
+        - 1
+        - 32
+      - name: hidden1_features
+        type: range
+        bounds:
+        - 5
+        - 32
+      - name: hidden2_features
+        type: range
+        bounds:
+        - 0
+        - 32
+      tracking_metrics:
+      - average_mse
+      - inference_time
+    hyperparameter_config:
+      trials: 30
+      parameter_constraints:
+        - "inference_time <= 8"
+      parameter_space:
+      - name: learning_rate
+        type: range
+        bounds:
+        - 0.0001
+        -  0.01
+        log_scale: true
+      - name: epochs
+        type: fixed
+        value: 50
       - name: batch_size
         type: fixed
         value: 32
