--- a/config.yaml
+++ b/config.yaml
@@ -332,7 +332,7 @@ minibude:
           - '-i'
           - '1'
           - '-n'
-          - '1048576'
+          - '4194304'
           - '--ni'
           - '4'
       load_entire: false
@@ -349,8 +349,10 @@ minibude:
       objectives:
       - name: average_mse
         type: minimize
+        threshold: 10
       - name: inference_time
         type: minimize
+        threshold: 250
       parameter_space:
       - name: feature_multiplier
         type: range
@@ -358,8 +360,10 @@ minibude:
         - 0.0
         - 1.0
       - name: multiplier
-        type: fixed
-        value: 1
+        type: range
+        bounds:
+        - 1
+        - 256
       - name: num_hidden_layers
         type: range
         bounds:
@@ -368,30 +372,28 @@ minibude:
       - name: hidden_1_features
         type: range
         bounds:
-        - 32
-        - 1024
+        - 8
+        - 2048
       tracking_metrics:
       - average_mse
       - inference_time
     hyperparameter_config:
-      trials: 50
-      parameter_constraints:
-        - "inference_time <= 250"
+      trials: 60
       parameter_space:
       - name: learning_rate
         type: range
         bounds:
-        - 0.0001
+        - 0.000001
         -  0.01
         log_scale: true
       - name: epochs
         type: fixed
-        value: 100
+        value: 70
       - name: batch_size
         type: range
         bounds:
           - 32
-          - 1024
+          - 512
       - name: dropout
         type: range
         bounds:
