--- a/further_training/config.yaml
+++ b/further_training/config.yaml
@@ -1,8 +1,8 @@
 ---
 particlefilter:
   train_args:
-    pareto_frontier_file: '/scratch/mzu/zanef2/surrogates/hpacml-experimentation/2024-02-25_particlefilter/pareto_parameters.json'
-    all_trials_file: '/scratch/mzu/zanef2/surrogates/hpacml-experimentation/2024-02-25_particlefilter/trial_results.csv'
+    pareto_frontier_file: '/scratch/mzu/zanef2/surrogates/hpacml-experimentation/2024-03-03_particlefilter/pareto_parameters.json'
+    all_trials_file: '/scratch/mzu/zanef2/surrogates/hpacml-experimentation/2024-03-03_particlefilter/trial_results.csv'
     pareto_only: false
     epochs: 500
     early_stop_args:
@@ -13,4 +13,18 @@ particlefilter:
     load_entire: false
     train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/particlefilter_128x128_13000.h5'
     output_models_directory: 'particlefilter_output_models'
+miniweather:
+  train_args:
+    pareto_frontier_file: '/scratch/mzu/zanef2/surrogates/hpacml-experimentation/2024-02-28_miniweather/pareto_parameters.json'
+    all_trials_file: '/scratch/mzu/zanef2/surrogates/hpacml-experimentation/2024-02-28_miniweather/trial_results.csv'
+    pareto_only: false
+    epochs: 500
+    early_stop_args:
+      patience: 100
+      min_delta_percent: 1
+  data_args:
+    region_name: 'MiniWeatherTimestep'
+    load_entire: false
+    train_test_dataset: '/scratch/mzu/zanef2/surrogates/training_data/miniweather_768_384.h5'
+    output_models_directory: 'miniweather_output_models'
 
